syntax = "proto3";

package autonatv2.pb;

message Message {
    oneof msg {
        DialRequest dialRequest   = 1;
        DialResponse dialResponse = 2;
        DialDataRequest dialDataRequest = 3;
    }
}

message DialRequest {
    repeated bytes addrs = 1;
    fixed64 nonce = 2;
}

message DialDataRequest {
    uint32 addrIdx = 1;
    uint64 numBytes = 2;
}


message DialResponse {
    enum ResponseStatus {
        ResponseStatus_OK         = 0;
        E_BAD_REQUEST             = 100;
        E_REQUEST_REFUSED         = 101;
        E_INTERNAL_ERROR          = 300;
    }

    enum DialStatus {
        DialStaus_OK              = 0;
        E_DIAL_ERROR              = 100;
        E_CONN_UPGRADE_FAILED     = 101;
        E_ATTEMPT_ERROR           = 102;
        E_DIAL_REFUSED            = 200;
        E_TRANSPORT_NOT_SUPPORTED = 300;
        E_ADDRESS_UNKNOWN         = 301;
    }

    ResponseStatus status = 1;
    repeated DialStatus dialStatuses = 2;
}

message DialAttempt {
    fixed64 nonce = 1;
}
